networking/traefik/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata: { name: civiclink-rate-limit, namespace: civiclink }
spec: { rateLimit: { average: 100, burst: 200, sourceCriterion: { ipStrategy: { depth: 1 } } } }
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata: { name: civiclink-headers, namespace: civiclink }
spec:
  headers:
    customRequestHeaders: { X-Forwarded-Proto: https }
    contentSecurityPolicy: "default-src 'self'"
    frameDeny: true
    sslRedirect: true
    stsSeconds: 31536000
